<resources>
    <string name="app_name">MyDays</string>

    <string name="task_fragment_title">Tasks</string>
    <string name="history_fragment_title">History</string>

    <string name="start_end_time_invalid">End time should be larger than start time!</string>
    <string name="task_description_invalid">Please fill in task description!</string>

    <string name="hint_task_description">Write what you did</string>

    <string name="button_previous_tasks">Previous Tasks</string>

    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="button_ok">Ok</string>

    <string name="create_new_task_title">Create New Task</string>
    <string name="edit_task_title">Edit Task</string>

    <string name="start_time_text">Start Time</string>
    <string name="end_time_text">End Time</string>

    <string name="start_time_desc_first_touched">Start Time set to current time</string>

    <string name="pick_previous_task_title">Pick from Previous Tasks</string>

    <string name="task_empty">No tasks done, yet!\nTry adding what you've done!</string>
    <string name="history_empty">No history, yet!</string>
    <string name="task_picker_empty">No previous tasks.</string>

    <string name="text_proceeding">Proceeding</string>

    <string name="press_again_to_quit">Press again to quit</string>

    <string name="today_text">Today</string>

    <string name="confirm_edit_format">Commit task \"%3$s\" from %1$s to %2$s?</string>
    <string name="confirm_delete">Are you sure to remove this task?</string>

    <string name="hours_text">h</string>
    <string name="minutes_text">m</string>

    <string name="start_text">Start</string>
    <string name="stop_text">Stop</string>

    <string name="noti_empty_task_description">Click to write your task!</string>
</resources>
