<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="@dimen/task_editor_dialog_task_desc_side_margin"
        android:gravity="center_vertical"
        >

        <EditText
            android:id="@+id/task_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"
            android:textSize="@dimen/task_editor_dialog_task_desc_textsize"
            android:textColorHint="@color/grey"
            android:textColor="@android:color/black"
            android:hint="@string/hint_task_description"/>

        <com.hansollee.mydays.widgets.CircularImageView
            android:id="@+id/thumbnail"
            android:layout_width="@dimen/task_item_thumbnail_size"
            android:layout_height="@dimen/task_item_thumbnail_size"
            android:layout_marginLeft="@dimen/task_item_thumbnail_margin_left"
            android:layout_marginStart="@dimen/task_item_thumbnail_margin_left"
            android:src="@color/default_task_thumbnail_color"
            android:background="@drawable/button_background"
            android:clickable="true"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/previous_tasks_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:textSize="14sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/button_previous_tasks"
        android:background="@drawable/button_background"
        android:clickable="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical|end"
        android:paddingBottom="8dp"
        android:paddingRight="16dp"
        android:paddingEnd="16dp"
        >

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/grey"
            android:text="@string/button_cancel"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/button_ok"
            style="?android:attr/buttonBarButtonStyle"
            />

    </LinearLayout>

</LinearLayout>