<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/task_editor_dialog_side_margin"
    android:layout_marginRight="@dimen/task_editor_dialog_side_margin"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="4dp"
            >

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/task_editor_dialog_title_left_margin"
                android:layout_marginStart="@dimen/task_editor_dialog_title_left_margin"
                android:textSize="@dimen/task_editor_dialog_title_textsize"
                android:textColor="@android:color/white"
                android:layout_gravity="center_vertical"
                />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:weightSum="2"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/start_time_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="40dp"
                    android:textSize="@dimen/task_editor_dialog_time_desc_textsize"
                    android:textColor="@color/grey"
                    android:gravity="center"
                    android:paddingLeft="4dp"
                    android:paddingStart="4dp"
                    android:background="@drawable/button_background"
                    android:clickable="true"
                    android:text="@string/start_time_text"
                    />

                <com.hansollee.mydays.widgets.SimpleTimePicker
                    android:id="@+id/start_timepicker"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/task_editor_dialog_timepicker_height"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >

                <LinearLayout
                    android:id="@+id/end_time_text_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:clickable="true"
                    android:background="@drawable/button_background"
                    android:minHeight="40dp"
                    >

                    <CheckBox
                        android:id="@+id/end_time_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        />

                    <TextView
                        android:id="@+id/end_time_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/task_editor_dialog_time_desc_textsize"
                        android:textColor="@color/grey"
                        android:gravity="center"
                        android:paddingRight="4dp"
                        android:paddingEnd="4dp"
                        android:text="@string/end_time_text"
                        />

                </LinearLayout>

                <com.hansollee.mydays.widgets.SimpleTimePicker
                    android:id="@+id/end_timepicker"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_below="@id/end_time_text_container"
                    android:visibility="gone"
                    />

                <TextView
                    android:id="@+id/text_proceeding"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_below="@id/end_time_text_container"
                    android:textColor="@color/grey"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:text="@string/text_proceeding"
                    android:visibility="visible"
                    />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="@dimen/task_editor_dialog_task_desc_side_margin"
            android:gravity="center_vertical"
            >

            <EditText
                android:id="@+id/task_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text"
                android:textSize="@dimen/task_editor_dialog_task_desc_textsize"
                android:textColorHint="@color/grey"
                android:textColor="@android:color/black"
                android:hint="@string/hint_task_description"/>

            <com.hansollee.mydays.widgets.CircularImageView
                android:id="@+id/thumbnail"
                android:layout_width="@dimen/task_item_thumbnail_size"
                android:layout_height="@dimen/task_item_thumbnail_size"
                android:layout_marginLeft="@dimen/task_item_thumbnail_margin_left"
                android:layout_marginStart="@dimen/task_item_thumbnail_margin_left"
                android:src="@color/default_task_thumbnail_color"
                android:background="@drawable/button_background"
                android:clickable="true"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/previous_tasks_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/button_previous_tasks"
            android:background="@drawable/button_background"
            android:clickable="true"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical|end"
            android:paddingBottom="8dp"
            android:paddingRight="16dp"
            android:paddingEnd="16dp"
            >

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/grey"
                android:text="@string/button_cancel"
                style="?android:attr/buttonBarButtonStyle"
                />

            <Button
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textSize="14sp"
                android:textColor="@color/colorAccent"
                android:text="@string/button_delete"
                style="?android:attr/buttonBarButtonStyle"
                />

            <Button
                android:id="@+id/ok_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textSize="14sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/button_ok"
                style="?android:attr/buttonBarButtonStyle"
                />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
